Updated by task 'AutomatedMDTask_1646331728783_TM-MT_1646331758502'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/dynamic-media-developer-resources.en/commit/32d50acdb01a78763b81d9cdc871abd7eebc3a3a

--- a/help/aem-viewers-ref/c-release-notes/c-rn-03-02-22.md
+++ b/help/aem-viewers-ref/c-release-notes/c-rn-03-02-22.md
@@ -4,9 +4,9 @@ description: AdobeDynamic Media查看器的发行说明。
 solution: Experience Manager
 feature: Dynamic Media Classic,Viewers,SDK/API
 role: Developer,User
-source-git-commit: 1206692a788d3e675b1f7f83a7835037905e0bba
+source-git-commit: 364583e4eb648e8e68736bfb24fa4f7d635e1291
 workflow-type: tm+mt
-source-wordcount: '663'
+source-wordcount: '661'
 ht-degree: 0%
 
 ---
@@ -66,8 +66,8 @@ googlebot: noindex -->
 
 ## Dynamic Media查看器5.16.3 {#new-features-and-enhancements-5-16-3}
 
-* 使用+、 — 和Esc导航键时，更正了可缩放视图中的NVDA焦点陷阱。 (CQ-4290719)
-* 向卷滑块添加了ARIA支持。 (CQ-4324080)
+* 使用+、 — 和Esc导航键时，更正了可缩放视图中的NVDA焦点陷阱。 <!-- (CQ-4290719) -->
+* 向卷滑块添加了ARIA支持。 <!--  (CQ-4324080) -->
 * 为添加了可视星号(*)符号 `To` 和 `From` “电子邮件”对话框中的必需电子邮件编辑字段。 <!-- (CQ-4290935) -->
 * 使用向下箭头和表单模式快捷键修复了“电子邮件”对话框中的讲述标签信息 `F`. <!-- (CQ-4290934) -->
 * 修复了 `To` 和 `From` “使用键盘”选项卡的“电子邮件”对话框中。 <!-- (CQ-4290930) -->
