Updated by task 'AutomatedMDTask_1646433632743_TM-MT_1646433646255'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/dynamic-media-developer-resources.en/commit/97a7f634313a23d9baa620e9e19ab50bea96ce15

--- a/help/s7-release-notes/s7rn60.md
+++ b/help/s7-release-notes/s7rn60.md
@@ -5,9 +5,9 @@ solution: Experience Manager
 feature: Dynamic Media Classic
 role: Developer,User
 exl-id: 3ce75efb-3761-4991-bb4f-beeaab3f2633
-source-git-commit: 50dddf148345d2ca5243d5d7108fefa56d23dad6
+source-git-commit: 790ce3aa4e9aadc019d17e663fc93d7c69772b23
 workflow-type: tm+mt
-source-wordcount: '1079'
+source-wordcount: '1078'
 ht-degree: 6%
 
 ---
@@ -130,9 +130,9 @@ ht-degree: 6%
 
    >[!NOTE]
    >
-   >元数据服务器将从5月开始可用。 必须由支持部门启用。 元数据服务器当前仅在北美和欧洲可用。
+   >元数据服务器从5月开始可用。 必须由支持部门启用。 元数据服务器当前仅在北美和欧洲可用。
 
-* 元数据服务器将资产的所有元数据字段的子集公开给面向公众的服务器，并可在此处由eCom页面或服务器请求。 此公开的元数据可以混合使用资产属性、UDF、XMP和元数据架构属性。 元数据服务器提供了具有多种搜索功能的WEB-API，例如搜索元数据、图像相似性，或两者兼有。 对于每个返回的资产，都会请求元数据属性的列表。 <!-- [More information](http://help.adobe.com/en_US/scene7/using/WS1ffbb36e209a6fc9-44279087131d3ad5622-8000.html). -->
+* 元数据服务器将资产的所有元数据字段的子集公开给面向公众的服务器，并可在此处由eCom页面或服务器请求。 此公开的元数据可以混合使用资产属性、UDF、XMP和元数据架构属性。 元数据服务器提供了具有多种搜索功能的WEB-API，例如搜索元数据、图像相似性，或两者兼有。 对于每个返回的资产，都会请求元数据属性的列表。
 * 元数据导入可以处理XMP属性
 
    扩展了元数据导入以处理在元数据架构中定义的XMP属性和属性。
