Updated by task 'AutomatedMDTask_1662749917858_TM-MT_1662749976638'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/dynamic-media-developer-resources.en/commit/6b26e9f39b9e7899970ea4a2f651602a9fa9db88

--- a/help/s7-release-notes/s7rn60.md
+++ b/help/s7-release-notes/s7rn60.md
@@ -5,9 +5,9 @@ solution: Experience Manager
 feature: Dynamic Media Classic
 role: Developer,User
 exl-id: 3ce75efb-3761-4991-bb4f-beeaab3f2633
-source-git-commit: 790ce3aa4e9aadc019d17e663fc93d7c69772b23
+source-git-commit: ec02213bc161f4e8fd7eb9c0017aeb42f27d055a
 workflow-type: tm+mt
-source-wordcount: '1078'
+source-wordcount: '1043'
 ht-degree: 6%
 
 ---
@@ -91,11 +91,11 @@ ht-degree: 6%
 **工作流集成**
 
 * 与Adobe CQ5集成：资产同步、CQ5中嵌入的Scene7查看器，以及通过Scene7网络在CQ5页面中动态交付富媒体内容。
-* 与AdobeSearch&amp;Promote集成的新工作流：轻松添加Scene7营销横幅，这些横幅是根据Search&amp;Promote促销活动规则动态组合的，用于搜索和导航页面。
-
-   请参阅AdobeSearch&amp;Promote文档中的“关于横幅”。
-
 * Scene7/Creative Suite — 与即将发布的AdobeCreative Suite6兼容。
+
+<!-- Search&Promote is end of life as of September 1, 2022 * New integrated workflow with Adobe Search&Promote: Easily add Scene7 marketing banners that are dynamically assembled based on Search&Promote campaign rules to search and navigation pages.
+
+  See "About Banners" in Adobe Search&Promote documentation.  -->
 
 **内容模板（动态横幅和Web-To-Print）**
 
