Updated by task 'AutomatedMDTask_1668182851419_TM-MT_1668182885729'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/dynamic-media-developer-resources.en/commit/b277acc23c40e0a8db1c090fb3e62e1518cb6a21

--- a/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-04-01-19.md
+++ b/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-04-01-19.md
@@ -5,9 +5,9 @@ solution: Experience Manager
 feature: Dynamic Media Classic,Viewers,SDK/API
 role: Developer,User
 exl-id: d6db62d2-d780-48d6-bfa0-40fc4abd9a60
-source-git-commit: 11acb9151d3ea247eecde3cfbbd295a95c10829c
+source-git-commit: bf31e5226cbb763e2fb82391772b64e5d5c89fae
 workflow-type: tm+mt
-source-wordcount: '603'
+source-wordcount: '601'
 ht-degree: 0%
 
 ---
@@ -102,7 +102,7 @@ ht-degree: 0%
 **HTML5视频**
 
 * 海报图像可能会遇到 `max size` 错误。 在这种情况下，必须提高“图像提供发布”的限制设置。
-* 如果托管HTML页面是从外部服务器(而不是Dynamic Media服务器)提供，则视频字幕需要设置公司规则集。 请联系技术支持以获取帮助。
+* 如果从外部服务器(而非 [!DNL Dynamic Media] 服务器)。 请联系技术支持以获取帮助。
 * 由于缓冲，Analytics跟踪可能会报告不正确的播放百分比。
 * 在iPad或Android™设备上，可能会显示黑色框架，而不是海报图像。
 * 在iPad或Android™设备上，加载查看器期间，屏幕上可能会闪烁黑帧。
