--- a/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-07-08-19.md
+++ b/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-07-08-19.md
@@ -5,9 +5,9 @@ solution: Experience Manager
 feature: Dynamic Media Classic,Viewers,SDK/API
 role: Developer,User
 exl-id: 266805aa-29a6-4e95-a7b8-43d95beeea36
-source-git-commit: 11acb9151d3ea247eecde3cfbbd295a95c10829c
+source-git-commit: bf31e5226cbb763e2fb82391772b64e5d5c89fae
 workflow-type: tm+mt
-source-wordcount: '554'
+source-wordcount: '548'
 ht-degree: 0%
 
 ---
@@ -37,7 +37,7 @@ ht-degree: 0%
    * genericZoomMobile
    * mixedMedia
 
-* Adobe Experience Manager Dynamic Media查看器
+* Adobe Experience Manager [!DNL Dynamic Media] 查看器
 
    * 轮播查看器
    * InteractiveImage
@@ -48,7 +48,7 @@ ht-degree: 0%
 
 ## 5.13.1的新增功能和增强功能 {#section-f55c5ff7f6d0406c8739de4981dd7195}
 
-* 添加了对与Launch Dynamic Media查看器扩展集成的支持。
+* 添加了对与Launch集成的支持Adobe [!DNL Dynamic Media] 查看器扩展。
 * 在Oculus Browser for Video360Viewer中添加了对VR操作模式的支持。
 * 添加了 `RolloverKeyEvent.HREF_ACTIVATED` 事件，以允许客户端代码响应eCatalogViewer和eCatalogSearchViewer中的图像映射激活。
 
@@ -97,7 +97,7 @@ ht-degree: 0%
 **HTML5视频**
 
 * 海报图像可能会遇到 `max size` 错误。 在这种情况下，必须提高“图像提供发布”的限制设置。
-* 如果托管HTML页面是从外部服务器(而不是Dynamic Media服务器)提供，则视频字幕需要设置公司规则集。 请联系技术支持以获取帮助。
+* 如果从外部服务器(而非 [!DNL Dynamic Media] 服务器)。 请联系技术支持以获取帮助。
 * 由于缓冲，Analytics跟踪可能会报告不正确的播放百分比。
 * 在iPad或Android™设备上，可能会显示黑色框架，而不是海报图像。
 * 在iPad或Android™设备上，加载查看器期间，屏幕上可能会闪烁黑帧。
