--- a/help/s7-release-notes/s7rn2017.md
+++ b/help/s7-release-notes/s7rn2017.md
@@ -4,25 +4,25 @@ description: “Adobe Dynamic Media Classic的最新发行说明，它是Adobe E
 feature: Dynamic Media Classic
 role: Developer,User
 exl-id: 2826138f-799e-4f2c-8993-0cfdb9328406
-source-git-commit: 11acb9151d3ea247eecde3cfbbd295a95c10829c
+source-git-commit: bf31e5226cbb763e2fb82391772b64e5d5c89fae
 workflow-type: tm+mt
-source-wordcount: '1359'
-ht-degree: 0%
+source-wordcount: '1344'
+ht-degree: 1%
 
 ---
 
-# Dynamic Media发行说明{#dynamic-media-release-notes}
+# [!DNL Dynamic Media] 发行说明{#dynamic-media-release-notes}
 
-Adobe Experience Cloud中Adobe Dynamic Media Classic部分的Adobe Experience Manager解决方案的最新发行说明。
+最新的发行说明，供Adobe [!DNL Dynamic Media] Classic -Adobe Experience Cloud中Adobe Experience Manager解决方案的一部分。
 
-## Dynamic Media发行说明 {#topic-1f5af440670a42f3bbb662eb86a196c6}
+## [!DNL Dynamic Media] 发行说明 {#topic-1f5af440670a42f3bbb662eb86a196c6}
 
-Adobe Dynamic Media Classic部分的最新发行说明 [!DNL Adobe Experience Manager] 解决方案 [!DNL Adobe Experience Cloud].
+最新的发行说明，供Adobe [!DNL Dynamic Media] 经典部分 [!DNL Adobe Experience Manager] 解决方案 [!DNL Adobe Experience Cloud].
 
 * [常规](s7rn2017.md#section-52afeb72ecb34c1585ea67a5051825a2)
 * [Scene7发布系统](s7rn2017.md#section-24487cb493444d808fb7193f0a00cdd4)
 * [查看器（图像提供5.8.1）](s7rn2017.md#section-e1940d4cedc641bca93236b4c1e0cfa7)
-* [Dynamic Media图像提供6.3.2和图像呈现6.3.2](s7rn2017.md#section-19a3e96f52c74757bcdea0f8a11001f2)
+* [[!DNL Dynamic Media] 图像提供6.3.2和图像呈现6.3.2](s7rn2017.md#section-19a3e96f52c74757bcdea0f8a11001f2)
 
 ## 常规 {#section-52afeb72ecb34c1585ea67a5051825a2}
 
@@ -54,7 +54,7 @@ Adobe很兴奋地宣布推出HTTP/2内容交付功能，这将带来性能提升
 
 ## 查看器（图像提供5.8.1） {#section-e1940d4cedc641bca93236b4c1e0cfa7}
 
-有关完整文档，请参阅 [查看器参考指南](https://experienceleague.adobe.com/docs/dynamic-media-developer-resources/library/homeviewers.html?lang=en).
+有关完整文档，请参阅 [查看器参考指南](https://experienceleague.adobe.com/docs/dynamic-media-developer-resources/library/homeviewers.html).
 
 **图像提供5.8.1的新增功能**
 
@@ -172,7 +172,7 @@ Adobe很兴奋地宣布推出HTTP/2内容交付功能，这将带来性能提升
 * HTML5视频
 
    * 海报图像可能会遇到“最大大小”错误。 公司必须提高图像服务发布的限制设置。
-   * 如果托管HTML页面是从外部服务器(而不是Dynamic Media服务器)提供的，则视频字幕需要公司规则集。 请联系Adobe支持以获取帮助。
+   * 如果托管HTML页面的视频字幕是从外部服务器(而不是 [!DNL Dynamic Media] 服务器)。 请联系Adobe支持以获取帮助。
    * 由于缓冲，Analytics跟踪可能会报告不正确的播放百分比。
    * 在iPad或Android™设备上，可能会显示黑帧而不是海报图像。
    * 在iPad或Android™设备上加载查看器时，屏幕上可能会闪烁黑帧。
@@ -182,7 +182,7 @@ Adobe很兴奋地宣布推出HTTP/2内容交付功能，这将带来性能提升
    * 首次访客时，海报图像可能无法在Microsoft® Edge浏览器中显示。
    * 当使用渐进式播放时，在Internet Explorer 9中加载视频后，海报图像可能会隐藏。
 
-## Dynamic Media图像提供6.3.2和图像呈现6.3.2 {#section-19a3e96f52c74757bcdea0f8a11001f2}
+## [!DNL Dynamic Media] 图像提供6.3.2和图像呈现6.3.2 {#section-19a3e96f52c74757bcdea0f8a11001f2}
 
 * IC实用程序 —  `downsample2x2` 标记不再受支持。 此标记质量较差，IPS不再使用2x2下采样器。
 * CORS标头 — 当前，为 `/is/content/` 请求。
