Updated by task 'AUTO_TM_MT_1743526275963'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/dynamic-media-developer-resources.en/commit/9a08ce861020fa4df293e83485d156df8d7f0110

--- a/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-04-29-14.md
+++ b/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-04-29-14.md
@@ -1,24 +1,22 @@
 ---
-title: Scene7 Viewers 5.0.1发行说明
-description: Scene7 Viewers 5.0.1发行说明
+title: Scene7查看器5.0.1发行说明
+description: Scene7查看器5.0.1发行说明
 solution: Experience Manager
 feature: Dynamic Media Classic,Viewers,SDK/API
 role: Developer,User
 exl-id: 308f5ebf-dd28-4f95-abca-24cc6c212bf4
-source-git-commit: 4f81f755789613222a66bed2961117604ae19e62
+source-git-commit: 06806a1b9b02ed44195909e0f322b05e9adbdec1
 workflow-type: tm+mt
-source-wordcount: '916'
+source-wordcount: '896'
 ht-degree: 0%
 
 ---
 
-# Scene7 Viewers 5.0.1发行说明{#scene-viewers-release-notes}
+# Scene7查看器5.0.1发行说明{#scene-viewers-release-notes}
 
 ## Adobe Scene7查看器 {#section-0b0363fae0274737bace119f281e740f}
 
-查看器升级可向后兼容，因此无需对现有Web代码进行更改。 但是，建议您在Adobe的暂存环境中测试新查看器。 以下网站提供了有关如何设置系统以访问Adobe暂存服务器的说明：
-
-[https://helpx.adobe.com/experience-manager/scene7/kb/base/upgrade-management/testing-scene7-viewers-upgrade.html](https://helpx.adobe.com/experience-manager/scene7/kb/base/upgrade-management/testing-scene7-viewers-upgrade.html)
+查看器升级可向后兼容，因此无需对现有Web代码进行更改。 但是，建议您在Adobe的暂存环境中测试新查看器。
 
 将计算机设置为访问暂存服务器后，您可以检查网站以测试升级。 对于使用开箱即用查看器的客户，最佳实践是针对Adobe的标准暂存服务器和s7is1-preview-staging.scene7.com进行测试。
 
@@ -62,13 +60,13 @@ ht-degree: 0%
 
 修复了以下错误：
 
-* FlashFastzoom和Flyout查看器可能存在安全问题。
+* 潜在的Flash Fastzoom和Flyout查看器安全问题。
 * 由于无法识别的用户代理，查看器未加载。
 * eCatalog Viewer鼠标拖放功能在包含图像映射的页面的Internet Explorer中不起作用。
-* Video Viewer阻止访问解锁Flash插件。
+* Video Viewer禁止访问解锁Flash插件。
 * 查看器阻止在Firefox浏览器上打印。
 * 视频查看器在启动或重置缩放时显示轻微抖动。
-* HTTPS支持HTML5和AS3查看器。
+* HTML5和AS3查看器支持HTTPS。
 
 删除了以下内容：
 
@@ -77,7 +75,7 @@ ht-degree: 0%
 
 ## 已知问题和限制 {#section-368dd0dc138b44e28b49314e4ad0fa1a}
 
-**所有Scene7查看者**
+**所有Scene7查看器**
 
 * 不支持水印、模糊处理和锁定。
 
@@ -90,7 +88,7 @@ ht-degree: 0%
 
 **Adobe Analytics培训**
 
-* 使用具有基于`s_code.jsp`的Adobe Analytics跟踪的Dynamic Media查看器时，将会发送所有跟踪事件的“页面”请求，而不是“跟踪”请求。 对于包含Dynamic Media查看器的页面，此过程会导致页面查看量度过度膨胀。 要解决此问题，请将AppMeasurementBridge.jsp的内容复制到一个将与查看器页面一起提供的JavaScript文件。 在生成的JavaScript中，对于除LOAD事件以外的所有事件，将所有对`s.t()`的调用替换为`s.tl()`。 此问题不会影响使用新的Scene7视频心率报表的Adobe Analytics视频查看器。
+* 使用具有基于`s_code.jsp`的Adobe Analytics跟踪的Dynamic Media查看器时，会发送“页面”请求，而不是“跟踪”所有跟踪事件的请求。 对于包含Dynamic Media查看器的页面，此过程会导致页面查看量度过度夸大。 要解决此问题，请将AppMeasurementBridge.jsp的内容复制到一个将与查看器页面一起提供的JavaScript文件。 在生成的JavaScript中，对于除LOAD事件以外的所有事件，将所有对`s.t()`的调用替换为`s.tl()`。 此问题不会影响使用新的Adobe Analytics视频心率报表的Scene7视频查看器。
 * Internet Explorer：在启用Adobe Analytics跟踪的情况下使用SSL/HTTPS时，出现“访问被拒绝”JavaScript错误。
 
 **eCatalog查看器**
@@ -113,7 +111,7 @@ ht-degree: 0%
 
 **视频查看器**
 
-* 海报图像可能遇到“最大大小”错误。 在这种情况下，用户必须增加图像服务Publish的限制设置。
+* 海报图像可能遇到“最大大小”错误。 在这种情况下，用户必须增加图像服务发布的限制设置。
 * 如果视频字幕托管的HTML页面来自非Scene7服务器的外部服务器，则视频字幕需要使用公司规则集。 请联系Adobe技术支持以获取帮助。
 * Analytics跟踪可能会由于缓冲而报告不正确的播放百分比。
 * iPad或Android™设备上可能会显示黑色帧而不是海报图像。
