--- a/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-05-20-15.md
+++ b/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-05-20-15.md
@@ -5,9 +5,9 @@ solution: Experience Manager
 feature: Dynamic Media Classic,Viewers,SDK/API
 role: Developer,User
 exl-id: 3008cdf7-7bc3-4e68-910d-5dbd1db41f8a
-source-git-commit: 11acb9151d3ea247eecde3cfbbd295a95c10829c
+source-git-commit: 06806a1b9b02ed44195909e0f322b05e9adbdec1
 workflow-type: tm+mt
-source-wordcount: '859'
+source-wordcount: '839'
 ht-degree: 0%
 
 ---
@@ -16,13 +16,11 @@ ht-degree: 0%
 
 ## Adobe Scene7查看器 {#section-0b0363fae0274737bace119f281e740f}
 
-查看器升级可向后兼容，因此无需对现有Web代码进行更改。 但是，建议您在Adobe的暂存环境中测试新查看器。 以下网站提供了有关如何设置系统以访问Adobe暂存服务器的说明：
-
-[https://helpx.adobe.com/experience-manager/scene7/kb/base/upgrade-management/testing-scene7-viewers-upgrade.html](https://helpx.adobe.com/experience-manager/scene7/kb/base/upgrade-management/testing-scene7-viewers-upgrade.html)
+查看器升级可向后兼容，因此无需对现有Web代码进行更改。 但是，建议您在Adobe的暂存环境中测试新查看器。
 
 将计算机设置为访问暂存服务器后，您可以检查网站以测试升级。 对于使用开箱即用查看器的客户，最佳实践是针对Adobe的标准暂存服务器和s7is1-preview-staging.scene7.com进行测试。
 
-**重要信息：**&#x200B;最新版本的Firefox现在默认阻止在网站上运行AdobeFlash插件。 如果您已在桌面系统上部署了使用AdobeFlash插件的Scene7视频播放器，则您具有以下三个选项：
+**重要信息：**&#x200B;现在，最新版本的Firefox默认禁止在网站上运行Adobe Flash插件。 如果已在桌面系统上部署了使用Adobe Flash插件的Scene7视频播放器，则有以下三个选项：
 
 * 用户在Firefox中查看的网页顶部看到一个提示。 在提示符下，用户可以选择继续阻止插件或允许插件运行，在这种情况下，视频将照常播放。
 * 将视频播放器设置为`playback=native`模式。 这样做会逐步播放MP4视频。
@@ -69,7 +67,7 @@ Adobe正在研究将来版本中用于在Firefox中解决此问题的选项。
 * 浏览器缩放会导致调整大小错误。
 * iPad 2 — 大型eCatalog资源在IOS上崩溃Safari。
 
-**所有Scene7查看者**
+**所有Scene7查看器**
 
 * 不支持水印、模糊处理和锁定。
 * 不支持图像预设。
@@ -102,7 +100,7 @@ Adobe正在研究将来版本中用于在Firefox中解决此问题的选项。
 
 **视频查看器**
 
-* 海报图像可能遇到“最大大小”错误。 用户必须增加图像服务Publish的限制设置。
+* 海报图像可能遇到“最大大小”错误。 用户必须增加图像服务发布的限制设置。
 * 如果视频字幕托管的HTML页面来自非Dynamic Media服务器的外部服务器，则视频字幕需要使用公司规则集。 请联系Adobe技术支持以获取帮助。
 * Analytics跟踪可能会由于缓冲而报告不正确的播放百分比。
 * iPad或Android™设备上可能会显示黑色帧而不是海报图像。
