--- a/help/s7-release-notes/s7rn610.md
+++ b/help/s7-release-notes/s7rn610.md
@@ -1,32 +1,32 @@
 ---
 title: Scene7 Publishing System 6.10发行说明（2015年5月）
-description: “最新发行说明介绍了Adobe Scene7 Publishing System 6.10(Adobe Experience Cloud中Adobe Experience Manager解决方案的一部分)的新增功能、增强功能和修复。”
+description: 最新发行说明介绍了Adobe Scene7 Publishing System 6.10(Adobe Experience Cloud中Adobe Experience Manager解决方案的一部分)的新增功能、增强功能和修复。
 solution: Experience Manager
 feature: Dynamic Media Classic
 role: Developer,User
 exl-id: dd998249-1986-491f-b0ab-554ab414f602
-source-git-commit: 11acb9151d3ea247eecde3cfbbd295a95c10829c
+source-git-commit: 06806a1b9b02ed44195909e0f322b05e9adbdec1
 workflow-type: tm+mt
-source-wordcount: '2365'
+source-wordcount: '2345'
 ht-degree: 0%
 
 ---
 
 # Scene7 Publishing System 6.10发行说明（2015年5月）{#scene-publishing-system-release-notes-may}
 
-最新发行说明介绍了Adobe Experience Cloud中Adobe Scene7解决方案的Adobe Experience Manager Publishing System 6.10部分的新增功能、增强功能和修复。
+最新发行说明介绍了Adobe Experience Cloud中Adobe Experience Manager解决方案的Adobe Scene7 Publishing System 6.10部分的新增功能、增强功能和修复。
 
 ## Scene7 Publishing System 6.10发行说明（2015年5月） {#topic-be8b44aea42643c496452726d4550226}
 
 最新发行说明介绍了[!DNL Adobe Experience Cloud]中[!DNL Adobe Experience Manager]解决方案的[!DNL Adobe Scene7 Publishing System] 6.10部分的新增功能、增强功能和修复。
 
-* [Scene7 Publishing System 6.10发行亮点](s7rn610.md#section-d2c3b12e392446868eba029cbe13c06b)
-* [Scene7 IPS (Image Production System) 4.5.0](s7rn610.md#section-3e37ed37b6d146419f4578bd7ffeaa74)
+* [Scene7 Publishing System 6.10发行说明](s7rn610.md#section-d2c3b12e392446868eba029cbe13c06b)
+* [Scene7 IPS（图像生产系统）4.5.0](s7rn610.md#section-3e37ed37b6d146419f4578bd7ffeaa74)
 * [查看器](s7rn610.md#section-833ab92c91c941d2bfdc27f233f582ad)
 * [Scene7 Publishing System 6.10的错误修复](s7rn610.md#section-99c1171604ff4ce489285dcab3d929c9)
 * [不再支持的功能](s7rn610.md#section-9295ea9313c84695b19bca0e0f01a690)
 
-## Scene7 Publishing System 6.10发行亮点 {#section-d2c3b12e392446868eba029cbe13c06b}
+## Scene7 Publishing System 6.10发行说明 {#section-d2c3b12e392446868eba029cbe13c06b}
 
 6.10版本允许您设计和提供丰富、响应迅速的交互式体验，这些体验可提高所有数字渠道的转化率。
 
@@ -74,7 +74,7 @@ ht-degree: 0%
  </tbody>
 </table>
 
-* **添加到现成HTML5旋转集查看器的新设置** — 在&#x200B;**[!UICONTROL 设置]** > **[!UICONTROL 应用程序设置]** > **[!UICONTROL 查看器]** > **[!UICONTROL 查看器预设]** > `Universal_HTML5_SpinSet_dark`或`Universal_HTML5_SpinSet_light`中，对每个查看器的[!DNL Configure Viewer]页面进行了以下添加：
+* **新设置已添加到现成的HTML5旋转集查看器** — 在&#x200B;**[!UICONTROL 设置]** > **[!UICONTROL 应用程序设置]** > **[!UICONTROL 查看器]** > **[!UICONTROL 查看器预设]** > `Universal_HTML5_SpinSet_dark`或`Universal_HTML5_SpinSet_light`中，已为每个查看器的[!DNL Configure Viewer]页面添加以下内容：
 
 <table id="table_E78C924E34894CD7BE080C0D71500784"> 
  <thead> 
@@ -157,7 +157,7 @@ ht-degree: 0%
  </tbody>
 </table>
 
-## Scene7 IPS (Image Production System) 4.5.0 {#section-3e37ed37b6d146419f4578bd7ffeaa74}
+## Scene7 IPS（图像生产系统）4.5.0 {#section-3e37ed37b6d146419f4578bd7ffeaa74}
 
 **新功能**
 
@@ -197,7 +197,7 @@ ht-degree: 0%
 
 不再支持&#x200B;**功能**
 
-* IPS Classic Publish验证中的目录服务器重新同步选项 — 已删除。
+* IPS Classic发布验证中的目录服务器重新同步选项 — 已删除。
 * 不能再设置空的或重复的元数据标记字段值。
 
 **错误修复**
@@ -206,13 +206,13 @@ ht-degree: 0%
 
 * 缺少用于方向的userdata字段。
 * 来自`getJobLogDetails`的更新ACO文件的作业响应未正确指定作业详细信息。
-* 每个图像服务器将PSD主文件记录为已发布多次。
+* PSD主文件被记录为每个图像服务器多次发布。
 * 名称中包含无效字符的Assets可以上传到IPS。
 * 无法生成的视频缩略图处于“队列中挂起”状态。
 * 大型`deleteFolder`和服务器目录上载之间文件夹还原的竞争条件。
 * 在上传时提前发布PDF文件时，每个发布服务器将PDF文件记录为发布两次。
-* 上载多个具有相同图层名称的PSD文件会导致优化错误。
-* 客户PDF的PDFL栅格化导致生成的图像中出现意外的白线。
+* 上传多个具有相同图层名称的PSD文件会导致优化错误。
+* 客户PDF的PDFL栅格化导致生成的图像中出现意外白线。
 * 视频缩略图文件在上传时发布多次。
 * 重复上传文件检测生成了两个上传通知，抛出了已完成的文件记帐。
 * 更新时，视频转码的Sidecar XML文件被记录为多次发布。
@@ -226,13 +226,11 @@ ht-degree: 0%
 
 ## 查看器 {#section-833ab92c91c941d2bfdc27f233f582ad}
 
-**Dynamic Media Image Serving Viewers 5.2.2**&#x200B;的新增功能、增强功能和错误修复
+**Dynamic Media图像服务查看器5.2.2**&#x200B;的新增功能、增强功能和错误修复
 
-查看器升级可向后兼容 — 无需对现有Web代码进行更改。 但是，建议您在Adobe的暂存环境中测试新查看器。 以下网站提供了有关如何设置系统以访问Adobe暂存服务器的说明：
+查看器升级可向后兼容 — 无需对现有Web代码进行更改。 但是，建议您在Adobe的暂存环境中测试新查看器。
 
-[https://helpx.adobe.com/experience-manager/scene7/kb/base/upgrade-management/testing-scene7-viewers-upgrade.html](https://helpx.adobe.com/experience-manager/scene7/kb/base/upgrade-management/testing-scene7-viewers-upgrade.html)
-
-将计算机设置为访问暂存服务器后，您可以检查网站以测试升级。 如果您使用的是开箱即用的HTML5查看器，则最佳实践是根据Adobe的标准暂存服务器和s7is5-preview-staging.scene7.com进行测试。
+将计算机设置为访问暂存服务器后，您可以检查网站以测试升级。 如果您使用的是开箱即用的HTML5查看器，则最佳实践是针对Adobe的标准暂存服务器和s7is5-preview-staging.scene7.com进行测试。
 
 新增功能和增强功能
 
@@ -255,7 +253,7 @@ ht-degree: 0%
 常规
 
 * 修复了s7sdk.browser.device.version错误地检测到第五个Android™的问题。
-* 删除了SDK组件中的visibility：visible styling用法。
+* 删除了SDK组件中“可见性：可见样式”的用法。
 
 FlyoutzoomView
 
@@ -290,7 +288,7 @@ videoplayer
 * 固定 — ZoomView — 如果为CSS中的IMG定义了max-width：100%，则会在IE上中断缩放和平移。
 * 添加了其他状态事件。
 
-针对Scene7 OnDemand5.0.3 **的错误修复**
+修复了Scene7 OnDemand 5.0.3的&#x200B;**错误**
 
 * 已修复 — 删除了视频嵌入代码中引用页面上多个视频不支持内容的注释。
 
@@ -298,28 +296,28 @@ videoplayer
 
 * 正在取消发布手动创建的、大小为“1”的样本集。
 * 不支持具有灰色pixelType的png8。
-* Publish设置未显示Scene7共享Assets公司的颜色配置文件。
+* 发布设置未显示Scene7共享Assets公司的颜色配置文件。
 * 从FTP上传屏幕：FTP文件夹未排序，但输出是已排序的文件夹列表。
 * 更改了Media Portal设置中“编辑组”的“资产访问权限”选项卡的描述。
-* 使用Secure Test Image Serving Publish设置时，格式错误的`clientAddressFilter`导致目录服务器出现异常。
-* 当URL中存在多个连续空格时，在Chrome浏览器中复制PDFURL失败。
+* 在使用安全测试图像服务发布设置时，格式错误的`clientAddressFilter`导致目录服务器出现异常。
+* 当PDF URL中存在多个连续空格时，在Chrome浏览器中复制URL失败。
 * Scene7 Publishing System中的FTP服务器和FTP帐户信息不一致。
 * 删除了[!DNL Adobe Experience Cloud]链接向导按钮。
 * MPEG视频已编码，但无法播放。
 * s7report Web服务更新后，带宽每日报表已损坏。
 * 原始仪表板域报告中未正确设置开始和结束日期。
-* 对Scene7 Publishing System中的Web-to-Print下载体验进行了改进。
+* 改进了Scene7 Publishing System中的Web到打印下载体验。
 * 已实施用于创建和更新标记类型元数据字段的配置用户界面。 `fieldType`参数中对&#x200B;**[!UICONTROL 元数据字段类型]**&#x200B;的支持仅包括`SingleFixedTag`和`BooleanTag`。
 
 * 在发送电子邮件地址中将`@scene7.com`更改为`@adobe.com`。
 
-* 添加了图像服务Publish类型选项。
+* 添加了图像服务发布类型选项。
 * 由于请求正文中的日期不正确，未显示视频流数据。
 * 历史存储数据不可用于“存储”报表。
 * 尝试访问带宽和存储设置时，错误响应收到错误。
 * 即使显示了数据，“带宽”报表仍出现“没有可用的带宽数据”错误。
 * 当前日期显示在“带宽和存储”报表中，而不是选定的日期中。
-* 更改了Scene7 Publishing System欢迎页面中显示的消息。
+* 更改了Scene7 Publishing System欢迎页中显示的消息。
 * 已将值`Userdata`字段添加回高级搜索。
 * 添加类型为`Boolean`的用户定义字段（**[!UICONTROL 设置]** > **元数据** > **用户定义字段**）和值`true`时出错，然后保存了该字段。
 
@@ -327,8 +325,8 @@ videoplayer
 
 * **Flash查看器生命周期结束通知** *自2017年1月31日起，Adobe Scene7(现为Dynamic Media Classic)正式终止对Flash查看器平台的支持。*
 
-* 提醒：自2014年1月31日起，Scene7正式停止支持DHTML查看器平台。
-* 由于Scene7应用程序不支持Creative Suite面板，因此此版本中已弃用Creative CloudFlash扩展。 内容摄取工作流的进一步开发重点在于Adobe Experience Manager Dynamic Media和Creative Cloud。 对于Scene7，Scene7 Publishing System中的上传和导出功能仍可保留并改用。
+* 提醒：自2014年1月31日起，Scene7正式终止对DHTML查看器平台的支持。
+* 由于Creative Cloud应用程序不支持Flash面板，因此此版本中已弃用Scene7 Creative Suite扩展。 内容摄取工作流的进一步开发重点在于Adobe Experience Manager Dynamic Media和Creative Cloud。 对于Scene7，可以保留Scene7发布系统中的上传和导出功能并改用。
 * 由于采用率较低，此版本已弃用UGC视频。 设置另一个Dynamic Media Classic帐户可以作为UGC视频的替代解决方案。 联系Adobe技术支持以设置其他帐户。
 * 由于采用率较低，本版本已弃用文本连字。 断字词典定义了如何拆分单词和断字以支持最佳文本流。
 * 由于采用率较低，元数据服务器和相似性搜索在2015年都被弃用。 当官方宣布弃用目标日期时，Adobe技术支持会通知受影响的客户。
