--- a/help/s7-release-notes/s7rn69.md
+++ b/help/s7-release-notes/s7rn69.md
@@ -1,26 +1,26 @@
 ---
-title: Scene7发布系统6.9发行说明（2014年10月）
-description: “最新发行说明介绍了Adobe Scene7 Publishing System 6.9(Adobe Experience Cloud中Adobe Experience Manager解决方案的一部分)的最新功能、增强功能和修复。”
+title: Scene7 Publishing System 6.9发行说明（2014年10月）
+description: 最新发行说明介绍了Adobe Scene7 Publishing System 6.9(Adobe Experience Cloud中Adobe Experience Manager解决方案的一部分)的最新功能、增强和修复。
 solution: Experience Manager
 feature: Dynamic Media Classic
 role: Developer,User
 exl-id: 5f120925-d387-4bac-8a4d-f67a198b2b8e
-source-git-commit: 4f81f755789613222a66bed2961117604ae19e62
+source-git-commit: 06806a1b9b02ed44195909e0f322b05e9adbdec1
 workflow-type: tm+mt
-source-wordcount: '1829'
+source-wordcount: '1809'
 ht-degree: 1%
 
 ---
 
-# Scene7发布系统6.9发行说明（2014年10月）{#scene-publishing-system-release-notes-october}
+# Scene7 Publishing System 6.9发行说明（2014年10月）{#scene-publishing-system-release-notes-october}
 
-最新发行说明介绍了Adobe Experience Cloud中Adobe Scene7解决方案的Adobe Experience Manager Publishing System 6.9部分的最新功能、增强和修复。
+最新发行说明介绍了Adobe Experience Cloud中Adobe Experience Manager解决方案的Adobe Scene7 Publishing System 6.9部分的最新功能、增强和修复。
 
-## Scene7发布系统6.9发行说明（2014年10月） {#topic-1d3011ecca71488abe0d8156a9fc1b97}
+## Scene7 Publishing System 6.9发行说明（2014年10月） {#topic-1d3011ecca71488abe0d8156a9fc1b97}
 
 最新发行说明介绍了[!DNL Adobe Experience Cloud]中Adobe Experience Manager解决方案的[!DNL Adobe Scene7 Publishing System] 6.9部分的最新功能、增强和修复。
 
-* [Scene7 Publishing System 6.9版本要点](s7rn69.md#section-2ed72b7902be4509876d81f25b5632ce)
+* [Scene7 Publishing System 6.9发行说明](s7rn69.md#section-2ed72b7902be4509876d81f25b5632ce)
 * [映像](s7rn69.md#section-98a61ea9a09940639f357f36969d6e55)
 * [视频](s7rn69.md#section-69101b28504543a7ae8a9346d381f913)
 * [网络打印](s7rn69.md#section-17c5591d279a48d3b0aea085a19d6321)
@@ -29,7 +29,7 @@ ht-degree: 1%
 * 针对Scene7 Publishing System 6.9的[错误修复](s7rn69.md#section-86dc0e8eb85241dbb449221becb12888)
 * [不再支持的功能](s7rn69.md#section-b061ad3d170a45ee8e694f997fd5d8ef)
 
-## Scene7 Publishing System 6.9发行亮点 {#section-2ed72b7902be4509876d81f25b5632ce}
+## Scene7 Publishing System 6.9发行说明 {#section-2ed72b7902be4509876d81f25b5632ce}
 
 6.9版本提供了新的高级eCatalog查看器、内联缩放查看器、视频播放器等。 这些新功能允许您设计和提供丰富、响应迅速的交互式体验，从而提高所有数字渠道的转化率。
 
@@ -64,7 +64,7 @@ ht-degree: 1%
 
 ## 查看器 {#section-fc0577722d0b431dae3506c8d4e5366f}
 
-**Scene7 HTML5 Viewer SDK 2.8.1**&#x200B;的新增功能、增强功能和错误修复
+**Scene7 HTML5 Viewer SDK 2.8.1的新增功能、增强功能和错误修复**
 
 常规
 
@@ -125,17 +125,15 @@ VideoScrubber
 
 * 已修复 — 如果`DIV`具有`text-align:center`样式，则图像向右偏移。
 
-针对Scene7 OnDemand5.0.2 **的**&#x200B;错误修复
+修复了Scene7 OnDemand 5.0.2 **的**&#x200B;错误
 
 * 固定 — 嵌入的修饰符未包含在引号中
 
-**Dynamic Media Image Serving Viewers 5.1.1}的新增功能、增强功能和错误修复**
+**Dynamic Media图像服务查看器5.1.1}的新增功能、增强功能和错误修复**
 
-查看器升级可向后兼容，因此无需对现有Web代码进行更改。 但是，建议您在Adobe的暂存环境中测试新查看器。 以下网站提供了有关如何设置系统以访问Adobe暂存服务器的说明：
+查看器升级可向后兼容，因此无需对现有Web代码进行更改。 但是，建议您在Adobe的暂存环境中测试新查看器。
 
-[https://helpx.adobe.com/experience-manager/scene7/kb/base/upgrade-management/testing-scene7-viewers-upgrade.html](https://helpx.adobe.com/experience-manager/scene7/kb/base/upgrade-management/testing-scene7-viewers-upgrade.html)
-
-将计算机设置为访问暂存服务器后，您可以检查网站以测试升级。 对于使用现成HTML5查看器的客户，最佳做法是针对Adobe的标准暂存服务器和s7is1-preview-staging.scene7.com进行测试。
+将计算机设置为访问暂存服务器后，您可以检查网站以测试升级。 对于使用现成HTML5查看器的客户，最佳实践是针对Adobe的标准暂存服务器和s7is1-preview-staging.scene7.com进行测试。
 
 新增功能和增强功能
 
@@ -146,17 +144,17 @@ VideoScrubber
 * 添加了对使用图像命令和/或基于图像宽度的图像预设的响应式图像的支持。
 * 添加了对将本地化文本字符串传递给HTML5查看器的JSON参数的支持。
 * 在HTML5查看器样本中添加了对本机页面滚动的支持。
-* 改进了对HTML5查看者的复杂资源和图像模板的支持。
+* 改进了HTML5查看者对复杂资源和图像模板的支持。
 * 向HTML5 eCatalog查看器添加了对目录的支持。
-* 添加了对HTML5 eCatalog的图像映射叠加与图标的支持。
+* 在HTML5 eCatalog中添加了对图像映射叠加与图标的支持。
 * 在HTML5 eCatalog查看器中增加了对翻页动画的支持。
 * 在HTML5 eCatalog中添加了对本机页面滚动的支持。
-* 添加了对使用HTML5弹出查看器的`highlightmode`修饰符显示窄图像的支持
-* 添加了对使用HTML5弹出查看器的`zoomfactor`修饰符控制图像升级的支持。
+* 添加了对使用HTML5弹出查看器`highlightmode`修饰符显示窄图像的支持
+* 添加了对使用HTML5弹出查看器`zoomfactor`修饰符控制图像升级的支持。
 * 添加了对跟踪由HTML5弹出查看器生成的事件的支持。
 * 向HTML5 MixedMedia查看器添加了对视频（仅限第一个视频）的字幕支持。
 * 将HTML5 Video和MixedMedia查看器的初始比特率默认值提高至1400。
-* 添加了对将视频播放循环到HTML5视频查看器的支持。
+* 添加了对将视频播放循环到HTML5 Video Viewer的支持。
 * 添加了对将章节导航到HTML5视频查看器的支持
 
 错误修复
@@ -166,8 +164,8 @@ VideoScrubber
 * 图像集：忽略附加到assetID的图像服务修饰符。
 * Internet Explorer 9： s7sdk.event： PageMouseEvent：单击并双击事件会触发崩溃浏览器页面。
 * Internet Explorer 9和Internet Explorer 10：使用JavaScript模板激活图像映射后，eCatalog查看器中断。
-* HTML5 MixedMedia查看器：交换资源类型时，缩放按钮状态未重置。
-* HTML5 MixedMedia查看器：如果第一个资源是2dspinset，则查看器会在响应模式下折叠。
+* HTML5 MixedMedia查看器：交换资源类型时，缩放按钮状态不会重置。
+* HTML5 MixedMedia查看器：如果第一个资产是2dspinset，则查看器会在响应模式下折叠。
 * Firefox：在加载图块之前，弹出框中会短暂显示断开的图像图标。
 * 捏合手势不会生成缩放。
 * eCatalog：图像映射：相对链接出现JavaScript错误
@@ -179,7 +177,7 @@ VideoScrubber
 * 不支持水印、模糊处理和锁定。
 * 不支持图像预设。
 
-HTML5所有查看器
+HTML5 — 所有查看器
 
 * 将查看器嵌入表中可能会导致在非本机全屏模式下查看器大小或放置位置不正确。 建议改用DIV。
 * 必须覆盖代码中具有显式实例名称的参数；还必须覆盖URL中的实例名称。 例如，`zoomView.iconfeffect=0`。
@@ -199,13 +197,13 @@ HTML5混合媒体查看器
 
 * 不支持音轨播放。
 
-HTML5社交查看器
+HTML5 Social查看器
 
 * 要在传出电子邮件中正确呈现缩略图，`serverurl`修饰符应具有绝对URL。
 
 HTML5视频查看器
 
-* 海报图像可能遇到“最大大小”错误。 因此，您必须增加图像服务Publish的限制设置。
+* 海报图像可能遇到“最大大小”错误。 因此，您必须增加图像服务发布的限制设置。
 * 如果视频字幕托管的HTML页面来自非Scene7服务器的外部服务器，则视频字幕需要使用公司规则集。 请联系Adobe技术支持以获取帮助。
 * Analytics跟踪可能会由于缓冲而报告不正确的播放百分比。
 * iPad或Android™设备上可能会显示黑色帧而不是海报图像。
@@ -213,19 +211,19 @@ HTML5视频查看器
 * 当iPad设备上的背景设置为白色/透明时，VideoPlayer组件的一侧会显示黑色边框。
 * 在使用iOS 7的iPad上，视频的最后一帧可能会失真。
 
-## Scene7 Publishing System 6.9的错误修复 {#section-86dc0e8eb85241dbb449221becb12888}
+## 修复了Scene7 Publishing System 6.9的错误 {#section-86dc0e8eb85241dbb449221becb12888}
 
 * 导出的资源总数将比“导出作业”日志详细信息中的原始数量大1。
 * 在按批次集预设生成的1d旋转中，当打开旋转集编辑器时，它应该只显示一次警告。
 * 无法预览现成的HTML5视频查看器预设。
-* 即使重写了规则，Scene7 Publishing System仍会记住该组。
-* Scene7 Publishing System没有正确显示某些重复正则表达式代码。
+* 即使重写了规则，图像生成系统仍会记住该组。
+* 图像生成系统无法正确显示某些重复正则表达式代码。
 * 如果未选择任何预设，则在上传时应用所有批次集预设。
 
 ## 不再支持的功能 {#section-b061ad3d170a45ee8e694f997fd5d8ef}
 
-* 由于Scene7应用程序不支持Creative Suite面板，因此此版本中已弃用Creative CloudFlash扩展。 内容摄取工作流的进一步开发重点在于Adobe Experience Manager Dynamic Media和Creative Cloud。 对于Scene7，Scene7 Publishing System中的上传和导出功能仍可保留并改用。
+* 由于Creative Cloud应用程序不支持Flash面板，因此此版本中已弃用Scene7 Creative Suite扩展。 内容摄取工作流的进一步开发重点在于Adobe Experience Manager Dynamic Media和Creative Cloud。 对于Scene7，可以保留Scene7发布系统中的上传和导出功能并改用。
 * 由于采用率较低，此版本已弃用UGC视频。 设置其他SPS帐户可作为UGC视频的替代解决方案。 联系Adobe技术支持以设置其他帐户。
 * 由于采用率较低，本版本已弃用文本连字。 断字词典定义了如何拆分单词和断字以支持最佳文本流。
 * 由于采用率较低，元数据服务器和相似性搜索在2015年被弃用。 当官方宣布弃用目标日期时，Adobe技术支持会通知受影响的客户。
-* 提醒：自2014年1月31日起，Scene7正式停止支持DHTML查看器平台。
+* 提醒：自2014年1月31日起，Scene7正式终止对DHTML查看器平台的支持。
