--- a/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-05-03-16.md
+++ b/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-05-03-16.md
@@ -5,9 +5,9 @@ solution: Experience Manager
 feature: Dynamic Media Classic,Viewers,SDK/API
 role: Developer,User
 exl-id: dde851f5-0766-4bd9-84b3-2600dd5f5700
-source-git-commit: 11acb9151d3ea247eecde3cfbbd295a95c10829c
+source-git-commit: 06806a1b9b02ed44195909e0f322b05e9adbdec1
 workflow-type: tm+mt
-source-wordcount: '815'
+source-wordcount: '795'
 ht-degree: 0%
 
 ---
@@ -20,18 +20,16 @@ ht-degree: 0%
 
 * 视频查看器 — “播放/暂停”按钮不显示“重播”状态。
 * 视频查看器 — 不显示导航标记。
-* BasicZoom、Zoom和旋转查看器 — IconEffect不显示或显示SDK默认图片。
+* BasicZoom、Zoom和旋转查看器 — IconEffect不显示或不显示SDK默认图片。
 * 弹出和缩放查看器 — 对于大型集，不显示样本滚动按钮。
 
-建议您在Adobe的暂存环境中测试查看器。 以下网站提供了有关如何设置系统以访问Adobe暂存服务器的说明：
-
-[https://helpx.adobe.com/experience-manager/scene7/kb/base/upgrade-management/testing-scene7-viewers-upgrade.html](https://helpx.adobe.com/experience-manager/scene7/kb/base/upgrade-management/testing-scene7-viewers-upgrade.html)
+建议您在Adobe的暂存环境中测试查看器。
 
 将计算机设置为访问暂存服务器后，您可以检查网站以测试升级。 对于使用开箱即用查看器的客户，最佳实践是针对Adobe的标准暂存服务器和s7is1-preview-staging.scene7.com进行测试。
 
 ## 5.4.2的新增功能和增强功能 {#section-f55c5ff7f6d0406c8739de4981dd7195}
 
-* Viewer SDK用在命名空间中。
+* 查看器SDK在命名空间中使用。
 * Viewer dispose() API。
 * 在iOS设备上添加了对Chrome浏览器的支持。
 * 添加了对Microsoft®Edge浏览器的支持。
@@ -99,7 +97,7 @@ ht-degree: 0%
 
 **视频查看器**
 
-* 海报图像可能遇到“最大大小”错误。 用户必须增加图像服务Publish的限制设置。
+* 海报图像可能遇到“最大大小”错误。 用户必须增加图像服务发布的限制设置。
 * 如果视频字幕托管的HTML页面来自非Scene7服务器的外部服务器，则视频字幕需要使用公司规则集。 请联系Adobe技术支持以获取帮助。
 * Analytics跟踪可能会由于缓冲而报告不正确的播放百分比。
 * iPad或Android™设备上可能会显示黑色帧而不是海报图像。
