--- a/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-09-19-14.md
+++ b/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-09-19-14.md
@@ -5,9 +5,9 @@ solution: Experience Manager
 feature: Dynamic Media Classic,Viewers,SDK/API
 role: Developer,User
 exl-id: 2f9b1d0a-2c89-41ed-af00-d8f3d636560c
-source-git-commit: 4f81f755789613222a66bed2961117604ae19e62
+source-git-commit: 06806a1b9b02ed44195909e0f322b05e9adbdec1
 workflow-type: tm+mt
-source-wordcount: '721'
+source-wordcount: '701'
 ht-degree: 0%
 
 ---
@@ -16,9 +16,7 @@ ht-degree: 0%
 
 ## Adobe Scene7查看器 {#section-0b0363fae0274737bace119f281e740f}
 
-查看器升级可向后兼容，因此无需对现有Web代码进行更改。 但是，建议您在Adobe的暂存环境中测试新查看器。 以下网站提供了有关如何设置系统以访问Adobe暂存服务器的说明：
-
-[https://helpx.adobe.com/experience-manager/scene7/kb/base/upgrade-management/testing-scene7-viewers-upgrade.html](https://helpx.adobe.com/experience-manager/scene7/kb/base/upgrade-management/testing-scene7-viewers-upgrade.html)
+查看器升级可向后兼容，因此无需对现有Web代码进行更改。 但是，建议您在Adobe的暂存环境中测试新查看器。
 
 将计算机设置为访问暂存服务器后，您可以检查网站以测试升级。 对于使用开箱即用查看器的客户，最佳实践是针对Adobe的标准暂存服务器和s7is1-preview-staging.scene7.com进行测试。
 
@@ -57,7 +55,7 @@ ht-degree: 0%
 
 ## 已知问题和限制 {#section-368dd0dc138b44e28b49314e4ad0fa1a}
 
-**所有Scene7查看者**
+**所有Scene7查看器**
 
 * 不支持水印、模糊处理和锁定。
 * 不支持图像预设。
@@ -88,7 +86,7 @@ ht-degree: 0%
 
 **视频查看器**
 
-* 海报图像可能遇到“最大大小”错误。 增加图像服务Publish的限制设置。
+* 海报图像可能遇到“最大大小”错误。 增加图像服务发布的限制设置。
 * 如果视频字幕托管的HTML页面来自非Scene7服务器的外部服务器，则视频字幕需要使用公司规则集。 请联系Adobe技术支持以获取帮助。
 * Analytics跟踪可能会由于缓冲而报告不正确的播放百分比。
 * iPad或Android™设备上可能会显示黑色帧而不是海报图像。
