Updated by mdAutofix.py

--- a/help/s7-release-notes/s7rn69.md
+++ b/help/s7-release-notes/s7rn69.md
@@ -129,7 +129,7 @@ VideoScrubber
 
 * 固定 — 嵌入的修饰符未包含在引号中
 
-**Dynamic Media图像服务查看器5.1.1}的新增功能、增强功能和错误修复**
+**Dynamic Media图像服务查看器5.1.1&rbrace;的新增功能、增强功能和错误修复**
 
 查看器升级可向后兼容，因此无需对现有Web代码进行更改。 但是，建议您在Adobe的暂存环境中测试新查看器。
 
