--- a/help/s7-release-notes/s7rn610.md
+++ b/help/s7-release-notes/s7rn610.md
@@ -234,7 +234,7 @@ ht-degree: 0%
 
 新增功能和增强功能
 
-另请参阅[查看器参考指南](https://experienceleague.adobe.com/docs/dynamic-media-developer-resources/library/homeviewers.html?lang=en)。
+另请参阅[查看器参考指南](https://experienceleague.adobe.com/docs/dynamic-media-developer-resources/library/homeviewers.html?lang=zh-Hans)。
 
 * 在eCatalog查看器中添加了对“打印”、“下载”和“收藏夹”的支持。
 * 添加了使用getComponent API检索ParameterManager的功能。
