--- a/help/s7-release-notes/s7rn68.md
+++ b/help/s7-release-notes/s7rn68.md
@@ -75,7 +75,7 @@ ht-degree: 0%
 * 设置ZoomView的初始缩放区域。
 * ZoomView可在无法缩放时隐藏`IconEffect`组件
 
-另请参阅[查看器参考指南](https://experienceleague.adobe.com/docs/dynamic-media-developer-resources/library/homeviewers.html?lang=en)。
+另请参阅[查看器参考指南](https://experienceleague.adobe.com/docs/dynamic-media-developer-resources/library/homeviewers.html?lang=zh-Hans)。
 
 <!-- **HTML5 Viewers SDK**
 
@@ -174,7 +174,7 @@ The *Adobe Scene7 HTML5 Viewers SDK* is available as part of the SDK download fr
 
 ## Dynamic Media图像服务查看器5.0.1的发行说明 {#section-3fc1a827bcc84c0488229d310086ad8e}
 
-请参阅[https://experienceleague.adobe.com/docs/dynamic-media-developer-resources/library/viewers-release-notes/archive/c-rn-04-29-14.html](https://experienceleague.adobe.com/docs/dynamic-media-developer-resources/library/viewers-release-notes/archive/c-rn-04-29-14.html)
+请参阅[https://experienceleague.adobe.com/docs/dynamic-media-developer-resources/library/viewers-release-notes/archive/c-rn-04-29-14.html?lang=zh-Hans](https://experienceleague.adobe.com/docs/dynamic-media-developer-resources/library/viewers-release-notes/archive/c-rn-04-29-14.html?lang=zh-Hans)
 
 ## Scene7 SDK 2.7.1中的新增功能和错误修复 {#section-b82b4f546ce44a769e94fb1493511035}
 
