Updated by AutoLocalizeURLs.py

--- a/help/s7-release-notes/s7rn2017.md
+++ b/help/s7-release-notes/s7rn2017.md
@@ -28,11 +28,11 @@ Adobe [!DNL Dynamic Media] Classic — Adobe Experience Cloud中Adobe Experience
 
 Adobe很高兴地宣布推出HTTP/2内容交付功能，这意味着性能将全面提升。
 
-请参阅[HTTP2内容交付常见问题解答](https://experienceleague.adobe.com/docs/experience-manager-65/assets/dynamic/http2.html#dynamic)。
+请参阅[HTTP2内容交付常见问题解答](https://experienceleague.adobe.com/docs/experience-manager-65/assets/dynamic/http2.html?lang=zh-Hans#dynamic)。
 
 ## 图像生成系统 {#section-24487cb493444d808fb7193f0a00cdd4}
 
-有关完整文档，请参阅[https://experienceleague.adobe.com/docs/dynamic-media-classic/using/intro/introduction.html#intro](https://experienceleague.adobe.com/docs/dynamic-media-classic/using/intro/introduction.html#intro)
+有关完整文档，请参阅[https://experienceleague.adobe.com/docs/dynamic-media-classic/using/intro/introduction.html?lang=zh-Hans#intro](https://experienceleague.adobe.com/docs/dynamic-media-classic/using/intro/introduction.html?lang=zh-Hans#intro)
 
 **新增功能、增强功能和错误修复**
 
@@ -54,7 +54,7 @@ Adobe很高兴地宣布推出HTTP/2内容交付功能，这意味着性能将全
 
 ## 查看器（图像服务5.8.1） {#section-e1940d4cedc641bca93236b4c1e0cfa7}
 
-有关完整文档，请参阅[查看器参考指南](https://experienceleague.adobe.com/docs/dynamic-media-developer-resources/library/homeviewers.html)。
+有关完整文档，请参阅[查看器参考指南](https://experienceleague.adobe.com/docs/dynamic-media-developer-resources/library/homeviewers.html?lang=zh-Hans)。
 
 **图像服务的新增功能5.8.1**
 
