Updated by task 'AUTO_TM_MT_1759356793142' Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/dynamic-media-developer-resources.en/commit/e3b4db662077ec455019156ba0fd649af705816b

--- a/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-04-30-15.md
+++ b/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-04-30-15.md
@@ -5,9 +5,9 @@ solution: Experience Manager
 feature: Dynamic Media Classic,Viewers,SDK/API
 role: Developer,User
 exl-id: 6451a838-312a-4ada-a11e-a597ed4eecbc
-source-git-commit: 06806a1b9b02ed44195909e0f322b05e9adbdec1
+source-git-commit: 2d4a26d04e11f544b4cbabaca592d77cfa2241d3
 workflow-type: tm+mt
-source-wordcount: '685'
+source-wordcount: '683'
 ht-degree: 0%
 
 ---
@@ -40,12 +40,7 @@ ht-degree: 0%
 
 ## 已知问题和限制 {#section-368dd0dc138b44e28b49314e4ad0fa1a}
 
-* iscommands中的图像服务修饰符未按设计添加到`req=set`请求中。 仅影响图像显示的修饰符工作正常。 必须在复杂资源中使用影响大小的修饰符。 例如：
-
-  ```
-  https://s7d9.scene7.com/s7viewers/html5/BasicZoomViewer.html?asset= {Scene7SharedAssets/Backpack_B?extendn=0.5%252C0.5%252C0.5%252C0.5}
-  ```
-
+* iscommands中的图像服务修饰符未按设计添加到`req=set`请求中。 仅影响图像显示的修饰符工作正常。 必须在复杂资源中使用影响大小的修饰符。
 * iPad — 手动集无法在Chrome浏览器上显示
 * 弹出 — Internet Explorer 9有时在鼠标关闭后仍会显示在屏幕上。
 * ZoomViewer — 无法通过鼠标单击缩放图像(Windows 8、触摸屏、Chrome)。
