--- a/help/s7-release-notes/s7rn2017.md
+++ b/help/s7-release-notes/s7rn2017.md
@@ -4,9 +4,9 @@ description: Adobe Dynamic Media Classic (Adobe Experience Cloud中Adobe Experie
 feature: Dynamic Media Classic
 role: Developer,User
 exl-id: 2826138f-799e-4f2c-8993-0cfdb9328406
-source-git-commit: 4f81f755789613222a66bed2961117604ae19e62
+source-git-commit: baf8015dc93cfa6be0a841243a7e3524f06f1639
 workflow-type: tm+mt
-source-wordcount: '1344'
+source-wordcount: '1342'
 ht-degree: 0%
 
 ---
@@ -28,11 +28,11 @@ Adobe [!DNL Dynamic Media] Classic — Adobe Experience Cloud中Adobe Experience
 
 Adobe很高兴地宣布推出HTTP/2内容交付功能，这意味着性能将全面提升。
 
-请参阅[HTTP2内容交付常见问题解答](https://experienceleague.adobe.com/docs/experience-manager-65/assets/dynamic/http2.html?lang=zh-Hans#dynamic)。
+请参阅[HTTP2内容交付常见问题解答](https://experienceleague.adobe.com/docs/experience-manager-65/assets/dynamic/http2.html#dynamic)。
 
 ## 图像生成系统 {#section-24487cb493444d808fb7193f0a00cdd4}
 
-有关完整文档，请参阅[https://experienceleague.adobe.com/docs/dynamic-media-classic/using/intro/introduction.html?lang=zh-Hans#intro](https://experienceleague.adobe.com/docs/dynamic-media-classic/using/intro/introduction.html?lang=zh-Hans#intro)
+有关完整文档，请参阅[https://experienceleague.adobe.com/docs/dynamic-media-classic/using/intro/introduction.html#intro](https://experienceleague.adobe.com/docs/dynamic-media-classic/using/intro/introduction.html#intro)
 
 **新增功能、增强功能和错误修复**
 
@@ -54,7 +54,7 @@ Adobe很高兴地宣布推出HTTP/2内容交付功能，这意味着性能将全
 
 ## 查看器（图像服务5.8.1） {#section-e1940d4cedc641bca93236b4c1e0cfa7}
 
-有关完整文档，请参阅[查看器参考指南](https://experienceleague.adobe.com/docs/dynamic-media-developer-resources/library/homeviewers.html?lang=zh-Hans)。
+有关完整文档，请参阅[查看器参考指南](https://experienceleague.adobe.com/docs/dynamic-media-developer-resources/library/homeviewers.html)。
 
 **图像服务的新增功能5.8.1**
 
@@ -133,10 +133,7 @@ Adobe很高兴地宣布推出HTTP/2内容交付功能，这意味着性能将全
 
 **已知问题和限制**
 
-* 来自`iscommands`的图像服务修饰符未按设计添加到`req=set`请求中。 仅影响图像显示的修饰符工作正常。 必须在复杂资源中使用影响大小的修饰符。 例如︰
-
-  `https://s7d9.scene7.com/s7viewers/html5/BasicZoomViewer.html?asset= {Scene7SharedAssets/Backpack_B?extendn=0.5%252C0.5%252C0.5%252C0.5}`
-
+* 来自`iscommands`的图像服务修饰符未按设计添加到`req=set`请求中。 仅影响图像显示的修饰符工作正常。 必须在复杂资源中使用影响大小的修饰符。
 * 鼠标关闭后，[弹出] IE9有时仍保留在屏幕上。
 * 浏览器缩放会导致调整大小错误。
 * iPad 2：大型eCatalog资源在iOS上崩溃Safari。
