--- a/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-01-13-21.md
+++ b/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-01-13-21.md
@@ -5,9 +5,9 @@ solution: Experience Manager
 feature: Dynamic Media Classic,Viewers,SDK/API
 role: Developer,User
 exl-id: 00a1069f-8cfe-41b4-aecd-33c2b6f9bcca
-source-git-commit: 11acb9151d3ea247eecde3cfbbd295a95c10829c
+source-git-commit: baf8015dc93cfa6be0a841243a7e3524f06f1639
 workflow-type: tm+mt
-source-wordcount: '639'
+source-wordcount: '637'
 ht-degree: 0%
 
 ---
@@ -71,10 +71,7 @@ ht-degree: 0%
 
 ## 已知问题和限制 {#known-issues-and-restrictions}
 
-* IS命令中的图像服务修饰符未按设计添加到`req=set`请求。 但是，只影响图像显示的修饰符可以正常使用。 必须在复杂资源中使用影响大小的修饰符。 例如：
-
-  `https://s7d9.scene7.com/s7viewers/html5/BasicZoomViewer.html?asset= {Scene7SharedAssets/Backpack_B?extendn=0.5%252C0.5%252C0.5%252C0.5}`
-
+* IS命令中的图像服务修饰符未按设计添加到`req=set`请求。 但是，只影响图像显示的修饰符可以正常使用。 必须在复杂资源中使用影响大小的修饰符。
 * 缩放浏览器窗口会导致不正确调整大小。
 * iPad 2 — 大型eCatalog资源在iOS上崩溃Safari。
 
