--- a/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-04-06-21.md
+++ b/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-04-06-21.md
@@ -5,9 +5,9 @@ solution: Experience Manager
 feature: Dynamic Media Classic,Viewers,SDK/API
 role: Developer,User
 exl-id: 636c8c11-9c79-41f3-8101-29fca0fab074
-source-git-commit: 6087b48b898e93e605c3873cbd5132b74d04225f
+source-git-commit: baf8015dc93cfa6be0a841243a7e3524f06f1639
 workflow-type: tm+mt
-source-wordcount: '602'
+source-wordcount: '600'
 ht-degree: 0%
 
 ---
@@ -67,13 +67,11 @@ googlebot: noindex -->
 
 ## Adobe客户关怀 {#customer-care}
 
-请参阅[支持](https://experienceleague.adobe.com/docs/dynamic-media-classic/using/intro/support.html?lang=zh-Hans#intro)。
+请参阅[支持](https://experienceleague.adobe.com/docs/dynamic-media-classic/using/intro/support.html#intro)。
 
 ## 已知问题和限制 {#known-issues-and-restrictions}
 
-* IS命令中的图像服务修饰符未按设计添加到`req=set`请求。 但是，只影响图像显示的修饰符可以正常使用。 必须在复杂资源中使用影响大小的修饰符。 例如：
-
-  `https://s7d9.scene7.com/s7viewers/html5/BasicZoomViewer.html?asset= {Scene7SharedAssets/Backpack_B?extendn=0.5%252C0.5%252C0.5%252C0.5}`
+* IS命令中的图像服务修饰符未按设计添加到`req=set`请求。 但是，只影响图像显示的修饰符可以正常使用。 必须在复杂资源中使用影响大小的修饰符。
 
 * 缩放浏览器窗口会导致不正确调整大小。
 * iPad 2 — 大型eCatalog资源在iOS上崩溃Safari。
@@ -109,7 +107,7 @@ googlebot: noindex -->
 ### HTML5视频 {#html5-video}
 
 * 海报图像可能遇到`max size`错误。 增加图像服务发布的限制设置。
-* 如果从外部服务器（而不是Dynamic Media服务器）提供宿主HTML页面，则视频字幕需要公司规则集。 请联系[Adobe客户关怀](https://experienceleague.adobe.com/docs/dynamic-media-classic/using/intro/support.html?lang=zh-Hans#intro)以获取帮助。
+* 如果从外部服务器（而不是Dynamic Media服务器）提供宿主HTML页面，则视频字幕需要公司规则集。 请联系[Adobe客户关怀](https://experienceleague.adobe.com/docs/dynamic-media-classic/using/intro/support.html#intro)以获取帮助。
 * Analytics跟踪可能会由于缓冲而报告不正确的播放百分比。
 * 在iPad或Android™设备上，显示的是黑色框架而不是海报图像。
 * 在iPad或Android™设备上，加载查看器期间屏幕上会闪烁“黑框”。
