--- a/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-05-03-16.md
+++ b/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-05-03-16.md
@@ -5,9 +5,9 @@ solution: Experience Manager
 feature: Dynamic Media Classic,Viewers,SDK/API
 role: Developer,User
 exl-id: dde851f5-0766-4bd9-84b3-2600dd5f5700
-source-git-commit: 06806a1b9b02ed44195909e0f322b05e9adbdec1
+source-git-commit: baf8015dc93cfa6be0a841243a7e3524f06f1639
 workflow-type: tm+mt
-source-wordcount: '795'
+source-wordcount: '793'
 ht-degree: 0%
 
 ---
@@ -54,12 +54,7 @@ ht-degree: 0%
 
 ## 5.4.2的已知问题和限制 {#section-af67bc1734844f31a89a09004b558c6e}
 
-* iscommands中的图像服务修饰符未按设计添加到`req=set`请求中。 仅影响图像显示的修饰符工作正常。 必须在复杂资源中使用影响大小的修饰符。 例如：
-
-  ```
-  https://s7d9.scene7.com/s7viewers/html5/BasicZoomViewer.html?asset= {Scene7SharedAssets/Backpack_B?extendn=0.5%252C0.5%252C0.5%252C0.5}
-  ```
-
+* iscommands中的图像服务修饰符未按设计添加到`req=set`请求中。 仅影响图像显示的修饰符工作正常。 必须在复杂资源中使用影响大小的修饰符。
 * 弹出 — Internet Explorer 9有时在关闭鼠标后仍保留在屏幕上。
 * ZoomViewer — 无法通过鼠标单击缩放图像(Windows 8、触摸屏、Chrome)。
 * 浏览器缩放会导致调整大小错误。
