--- a/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-05-20-15.md
+++ b/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-05-20-15.md
@@ -5,9 +5,9 @@ solution: Experience Manager
 feature: Dynamic Media Classic,Viewers,SDK/API
 role: Developer,User
 exl-id: 3008cdf7-7bc3-4e68-910d-5dbd1db41f8a
-source-git-commit: 06806a1b9b02ed44195909e0f322b05e9adbdec1
+source-git-commit: baf8015dc93cfa6be0a841243a7e3524f06f1639
 workflow-type: tm+mt
-source-wordcount: '839'
+source-wordcount: '837'
 ht-degree: 0%
 
 ---
@@ -55,12 +55,7 @@ Adobe正在研究将来版本中用于在Firefox中解决此问题的选项。
 
 ## 5.2.2的已知问题和限制 {#section-368dd0dc138b44e28b49314e4ad0fa1a}
 
-* iscommands中的图像服务修饰符未按设计添加到`req=set`请求中。 仅影响图像显示的修饰符工作正常。 必须在复杂资源中使用影响大小的修饰符。 例如：
-
-  ```
-  https://s7d9.scene7.com/s7viewers/html5/BasicZoomViewer.html?asset= {Scene7SharedAssets/Backpack_B?extendn=0.5%252C0.5%252C0.5%252C0.5}
-  ```
-
+* iscommands中的图像服务修饰符未按设计添加到`req=set`请求中。 仅影响图像显示的修饰符工作正常。 必须在复杂资源中使用影响大小的修饰符。
 * iPad — 手动设置无法在Chrome浏览器中显示。
 * 弹出 — Internet Explorer 9有时在鼠标关闭后仍会显示在屏幕上。
 * ZoomViewer — 无法通过鼠标单击缩放图像(Windows 8、触摸屏、Chrome)。
