--- a/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-06-03-20.md
+++ b/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-06-03-20.md
@@ -5,9 +5,9 @@ solution: Experience Manager
 feature: Dynamic Media Classic,Viewers,SDK/API
 role: Developer,User
 exl-id: 4d9909a8-c515-4f2d-8a21-ec2968f6e4b8
-source-git-commit: c99aac44711852d8ac661878e11ce0b19d3dbf60
+source-git-commit: baf8015dc93cfa6be0a841243a7e3524f06f1639
 workflow-type: tm+mt
-source-wordcount: '536'
+source-wordcount: '534'
 ht-degree: 0%
 
 ---
@@ -56,10 +56,7 @@ ht-degree: 0%
 
 ## 5.13.1的已知问题和限制 {#section-af67bc1734844f31a89a09004b558c6e}
 
-* IS命令中的图像服务修饰符未按设计添加到`req=set`请求。 但是，只影响图像显示的修饰符可以正常使用。 必须在复杂资源中使用影响大小的修饰符。 例如：
-
-  `https://s7d9.scene7.com/s7viewers/html5/BasicZoomViewer.html?asset= {Scene7SharedAssets/Backpack_B?extendn=0.5%252C0.5%252C0.5%252C0.5}`
-
+* IS命令中的图像服务修饰符未按设计添加到`req=set`请求。 但是，只影响图像显示的修饰符可以正常使用。 必须在复杂资源中使用影响大小的修饰符。
 * 缩放浏览器窗口会导致不正确调整大小。
 * iPad 2 — 大型eCatalog资源在iOS上崩溃Safari。
 
