--- a/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-07-08-19.md
+++ b/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-07-08-19.md
@@ -5,9 +5,9 @@ solution: Experience Manager
 feature: Dynamic Media Classic,Viewers,SDK/API
 role: Developer,User
 exl-id: 266805aa-29a6-4e95-a7b8-43d95beeea36
-source-git-commit: 4f81f755789613222a66bed2961117604ae19e62
+source-git-commit: baf8015dc93cfa6be0a841243a7e3524f06f1639
 workflow-type: tm+mt
-source-wordcount: '561'
+source-wordcount: '559'
 ht-degree: 0%
 
 ---
@@ -59,10 +59,7 @@ ht-degree: 0%
 
 ## 5.13.1的已知问题和限制 {#section-af67bc1734844f31a89a09004b558c6e}
 
-* IS命令中的图像服务修饰符未按设计添加到`req=set`请求。 但是，只影响图像显示的修饰符可以正常使用。 必须在复杂资源中使用影响大小的修饰符。 例如：
-
-  `https://s7d9.scene7.com/s7viewers/html5/BasicZoomViewer.html?asset= {Scene7SharedAssets/Backpack_B?extendn=0.5%252C0.5%252C0.5%252C0.5}`
-
+* IS命令中的图像服务修饰符未按设计添加到`req=set`请求。 但是，只影响图像显示的修饰符可以正常使用。 必须在复杂资源中使用影响大小的修饰符。
 * 缩放浏览器窗口会导致不正确调整大小。
 * iPad 2 — 大型eCatalog资源在iOS上崩溃Safari。
 
