--- a/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-07-17-18.md
+++ b/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-07-17-18.md
@@ -5,9 +5,9 @@ solution: Experience Manager
 feature: Dynamic Media Classic,Viewers,SDK/API
 role: Developer,User
 exl-id: 4df87531-b27a-4a52-9e35-2e7cda0f9742
-source-git-commit: c99aac44711852d8ac661878e11ce0b19d3dbf60
+source-git-commit: baf8015dc93cfa6be0a841243a7e3524f06f1639
 workflow-type: tm+mt
-source-wordcount: '521'
+source-wordcount: '519'
 ht-degree: 0%
 
 ---
@@ -29,10 +29,7 @@ ht-degree: 0%
 
 ## 5.10.1的已知问题和限制 {#section-af67bc1734844f31a89a09004b558c6e}
 
-* IS命令中的图像服务修饰符未按设计添加到`req=set`请求。 但是，只影响图像显示的修饰符可以正常使用。 必须在复杂资源中使用影响大小的修饰符。 例如：
-
-  `https://s7d9.scene7.com/s7viewers/html5/BasicZoomViewer.html?asset= {Scene7SharedAssets/Backpack_B?extendn=0.5%252C0.5%252C0.5%252C0.5}`
-
+* IS命令中的图像服务修饰符未按设计添加到`req=set`请求。 但是，只影响图像显示的修饰符可以正常使用。 必须在复杂资源中使用影响大小的修饰符。
 * 弹出查看器 — Internet Explorer 9有时在鼠标关闭后仍保留在屏幕上。
 * 缩放浏览器窗口会导致不正确调整大小。
 * iPad 2 — 大型eCatalog资源在iOS上崩溃Safari。
