--- a/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-10-13-16.md
+++ b/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-10-13-16.md
@@ -5,9 +5,9 @@ solution: Experience Manager
 feature: Dynamic Media Classic,Viewers,SDK/API
 role: Developer,User
 exl-id: f3efc1d4-1276-423b-bc22-557842cebc90
-source-git-commit: 11acb9151d3ea247eecde3cfbbd295a95c10829c
+source-git-commit: baf8015dc93cfa6be0a841243a7e3524f06f1639
 workflow-type: tm+mt
-source-wordcount: '626'
+source-wordcount: '624'
 ht-degree: 0%
 
 ---
@@ -36,10 +36,7 @@ ht-degree: 0%
 
 ## 5.5.1的已知问题和限制 {#section-af67bc1734844f31a89a09004b558c6e}
 
-* IS命令中的图像服务修饰符未按设计添加到`req=set`请求。 但是，只影响图像显示的修饰符可以正常使用。 必须在复杂资源中使用影响大小的修饰符。 例如：
-
-  `https://s7d9.scene7.com/s7viewers/html5/BasicZoomViewer.html?asset= {Scene7SharedAssets/Backpack_B?extendn=0.5%252C0.5%252C0.5%252C0.5}`
-
+* IS命令中的图像服务修饰符未按设计添加到`req=set`请求。 但是，只影响图像显示的修饰符可以正常使用。 必须在复杂资源中使用影响大小的修饰符。
 * 弹出查看器 — Internet Explorer 9有时在鼠标关闭后仍保留在屏幕上。
 * 缩放浏览器窗口会导致不正确调整大小。
 * iPad 2 — 一家大型eCatalog资产在iOS上导致Safari崩溃。
