--- a/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-04-06-21.md
+++ b/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-04-06-21.md
@@ -67,7 +67,7 @@ googlebot: noindex -->
 
 ## Adobe客户关怀 {#customer-care}
 
-请参阅[支持](https://experienceleague.adobe.com/docs/dynamic-media-classic/using/intro/support.html#intro)。
+请参阅[支持](https://experienceleague.adobe.com/docs/dynamic-media-classic/using/intro/support.html?lang=zh-Hans#intro)。
 
 ## 已知问题和限制 {#known-issues-and-restrictions}
 
@@ -107,7 +107,7 @@ googlebot: noindex -->
 ### HTML5视频 {#html5-video}
 
 * 海报图像可能遇到`max size`错误。 增加图像服务发布的限制设置。
-* 如果从外部服务器（而不是Dynamic Media服务器）提供宿主HTML页面，则视频字幕需要公司规则集。 请联系[Adobe客户关怀](https://experienceleague.adobe.com/docs/dynamic-media-classic/using/intro/support.html#intro)以获取帮助。
+* 如果从外部服务器（而不是Dynamic Media服务器）提供宿主HTML页面，则视频字幕需要公司规则集。 请联系[Adobe客户关怀](https://experienceleague.adobe.com/docs/dynamic-media-classic/using/intro/support.html?lang=zh-Hans#intro)以获取帮助。
 * Analytics跟踪可能会由于缓冲而报告不正确的播放百分比。
 * 在iPad或Android™设备上，显示的是黑色框架而不是海报图像。
 * 在iPad或Android™设备上，加载查看器期间屏幕上会闪烁“黑框”。
